<resources>
    <string name="movies_title">Movies</string>
    <string name="favorites_title">Favorites</string>
    <string name="app_name">Pronto Movie App</string>
    <string name="movie_list_empty">No movies found</string>
    <string name="favorites_empty">Your favorites list is empty</string>
</resources>
