<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/movieListFragment"
        android:icon="@drawable/ic_local_movies_black_24dp"
        android:title="@string/movies_title" />

    <item
        android:id="@+id/favoriteListFragment"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorites_title" />
</menu>